objects/User.object
<CustomObject><fields>
        <fullName>Business_Country__c</fullName>
        <label>Business Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabo Verde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Business_Email__c</fullName>
        <label>Business Email</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Business_State__c</fullName>
        <label>Business State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Connector_Contact_Id__c</fullName>
        <label>Connector Contact Id</label>
        <length>18</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Constituency__c</fullName>
        <description>Choose multiple items to describe user.</description>
        <inlineHelpText>Choose multiple items to describe user.</inlineHelpText>
        <label>Constituency</label>
        <picklist>
            <picklistValues>
                <fullName>Alumni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undergraduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governance</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>CoreId__c</fullName>
        <externalId>true</externalId>
        <label>CoreId</label>
        <length>15</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Degree__c</fullName>
        <label>Degree</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>External_Import_ID__c</fullName>
        <description>External Import ID - Used for importing data from CCD, BEE Spreadsheets</description>
        <inlineHelpText>External Import ID - Used for importing data from CCD, BEE Spreadsheets 
"111" or could be "Patty" or  ???</inlineHelpText>
        <label>External Import ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Give_to_Babson__c</fullName>
        <label>Give to Babson</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Graduate_Year__c</fullName>
        <label>Graduate Year</label>
        <picklist>
            <picklistValues>
                <fullName>1920</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1921</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1922</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1923</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1924</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1925</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1926</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1927</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1928</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1929</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1930</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1931</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1932</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1933</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1934</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1935</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1936</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1937</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1938</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1939</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1940</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1941</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1942</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1943</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1944</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1945</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1946</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1947</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1948</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1949</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Habitat_for_Humanity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Habitat for Humanity</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Ag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Tech</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <picklist>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Last_Mille_Update_Date__c</fullName>
        <label>Last Mille Update Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Legacy_Lynx_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Lynx Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Lynx_Record_Number__c</fullName>
        <externalId>true</externalId>
        <label>Lynx Record Number</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Nameprefkey__c</fullName>
        <label>Nameprefkey</label>
        <length>12</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Preferred_Constituency__c</fullName>
        <label>Preferred Constituency</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Public_Graduate_Year__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Public Graduate Year</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Undergraduate_Year__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Public Undergraduate Year</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Dummy value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy value 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy value 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Show_Business_3_Section__c</fullName>
        <formula>NOT(OR( 
Preferred_Constituency__c = "Faculty",
Preferred_Constituency__c = "Staff", 
Preferred_Constituency__c = "Student", 
Preferred_Constituency__c = "Parent",
Preferred_Constituency__c = "Other" 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Business 3 Section</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Show_Business_4_Section__c</fullName>
        <formula>NOT(OR( 
Preferred_Constituency__c = "Faculty",
Preferred_Constituency__c = "Staff", 
Preferred_Constituency__c = "Student", 
Preferred_Constituency__c = "Parent",
Preferred_Constituency__c = "Other" 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Business 4 Section</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Show_Education_Information__c</fullName>
        <formula>OR( 
Preferred_Constituency__c = "Alumni", 
Preferred_Constituency__c = "Student"
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Education Information</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Show_Giving_Information__c</fullName>
        <formula>OR(
Preferred_Constituency__c = "Alumni",
Preferred_Constituency__c = "Parent",
Preferred_Constituency__c = "Faculty",
Preferred_Constituency__c = "Staff",
Preferred_Constituency__c = "Other",
Preferred_Constituency__c = "Student"
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Giving Information</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Show_Home_Town_Information__c</fullName>
        <formula>OR( 
Preferred_Constituency__c = "Alumni", 
Preferred_Constituency__c = "Student" 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Home Town Information</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Undergraduate_Year__c</fullName>
        <label>Undergraduate Year</label>
        <picklist>
            <picklistValues>
                <fullName>1920</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1921</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1922</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1923</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1924</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1925</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1926</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1927</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1928</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1929</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1930</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1931</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1932</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1933</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1934</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1935</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1936</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1937</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1938</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1939</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1940</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1941</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1942</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1943</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1944</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1945</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1946</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1947</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1948</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1949</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>User_Login_Count__c</fullName>
        <label>User Login Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>addrseas2key__c</fullName>
        <label>SECONDARY ADDRESS 2</label>
        <length>12</length>
        <type>Text</type>
    </fields><fields>
        <fullName>addrseaskey__c</fullName>
        <label>SECONDARY ADDRESS 1</label>
        <length>12</length>
        <type>Text</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><externalSharingModel>Private</externalSharingModel><sharingModel>Read</sharingModel><listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>All_BEE_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MARKETING_USER</columns>
        <columns>Constituency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>BEE</value>
        </filters>
        <label>All BEE Users</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>All_CCD_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MARKETING_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>CCD,Strategic</value>
        </filters>
        <label>All CCD Users</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>All_Goldman_Sachs_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>MARKETING_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Goldman</value>
        </filters>
        <label>All Goldman Sachs Users</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>All_Users</fullName>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>contains</operation>
            <value>integr</value>
        </filters>
        <label>All Users</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Alumni_Community_SSF</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Alumni Community - SSF</value>
        </filters>
        <label>Alumni Community - SSF</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>ConstituencyMissing</fullName>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>FULL_NAME</columns>
        <columns>Constituency__c</columns>
        <columns>Preferred_Constituency__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Constituency__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Alumni Community - Alumni</value>
        </filters>
        <label>ConstituencyMissing</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>DotConnector</fullName>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>contains</operation>
            <value>.connector</value>
        </filters>
        <label>DotConnector</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Read_Only_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Read Only</value>
        </filters>
        <label>Read Only Users</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Temporary_for_BEE_CCD</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Temporary</value>
        </filters>
        <label>Temporary for BEE &amp; CCD</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>sf_admin</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>SF Admin</value>
        </filters>
        <label>SF Admin</label>
        <language>en_US</language>
    </listViews></CustomObject>